oxiplate-derive/tests/broken/if/if-let-multiple-without-expression.stderr
error: Expected `=`
 --> tests/broken/if/if-let-multiple-without-expression.rs:8:25
  |
8 | {%- if let Couple(a, b) -%}
  |                         ^^^
